--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fa": "^5.0.0",
+    "react-fontawesome": "^1.6.1",
     "react-http-request": "^1.0.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0"
